# brush

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/brush-android/: Cargo.toml
crates/brush-android/app/src/main/: AndroidManifest.xml
crates/brush-android/app/src/main/java/com/splats/app/: FilePicker.java  MainActivity.java
crates/brush-android/src/: lib.rs
crates/brush-dataset/: Cargo.toml
crates/brush-dataset/src/: lib.rs  scene_loader.rs  splat_export.rs  splat_import.rs  zip.rs
crates/brush-dataset/src/formats/: colmap.rs  mod.rs  nerfstudio.rs
crates/brush-desktop/: Cargo.toml
crates/brush-desktop/src/: main.rs
crates/brush-render/: Cargo.toml
crates/brush-render/benches/: render_bench.rs
crates/brush-render/src/: burn_glue.rs  camera.rs  dim_check.rs  gaussian_splats.rs  lib.rs  render.rs
crates/brush-render/src/shaders/: gather_grads.wgsl  helpers.wgsl  map_gaussian_to_intersects.wgsl  project_backwards.wgsl  project_forward.wgsl  project_visible.wgsl  rasterize_backwards.wgsl
crates/brush-render/test_cases/: NerfStudioRefGen.ipynb  basic_case.safetensors  tiny_case.safetensors
crates/brush-train/: Cargo.toml
crates/brush-train/src/: train.rs
crates/brush-ui/: Cargo.toml
crates/brush-ui/src/: burn_texture.rs  lib.rs
crates/brush-viewer/: Cargo.toml
crates/brush-viewer/src/: lib.rs  orbit_controls.rs  train_loop.rs  viewer.rs
crates/colmap-reader/src/: lib.rs
crates/rrfd/: Cargo.toml
crates/rrfd/src/: android.rs  lib.rs
crates/train-2d/: Cargo.toml
crates/train-2d/src/: main.rs
(+8 files in other folders)
