[package]
name = "brush-android"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
winit = { version = "0.30", features = ["android-game-activity"] }
egui.workspace = true
eframe.workspace = true
brush-viewer.path = "../brush-viewer"
brush-ui.path = "../brush-ui"
tokio_with_wasm = { workspace = true, features = ["rt"] }
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }

rrfd.path = "../rrfd"

android_logger = "0.14.1"
jni = "0.21.1"
log.workspace = true

[lib]
name = "main"
crate-type = ["cdylib"]
